--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,7 +15,7 @@ code {
 .product-category {
   margin: 20px;
   background-color: #f9f9f9; /* Light background color for the category section */
-  padding: 20px;
+  padding: 10px;
   border-radius: 8px; /* Rounded corners for the category section */
 }
 
@@ -71,21 +71,21 @@ code {
 }
 
 .view-details-button {
-  background-color: #007bff; /* Blue color for the button */
+  background-color: #DB7093; /* Blue color for the button */
   color: white;
 }
 
 .add-to-cart-button {
-  background-color: #007bff; /* Green color for the button */
+  background-color: #DB7093; /* Green color for the button */
   color: white;
 }
 
 .view-details-button:hover {
-  background-color: #0056b3; /* Darker blue for hover effect */
+  background-color: #f47ba3; /* Darker blue for hover effect */
 }
 
 .add-to-cart-button:hover {
-  background-color: #0056b3; /* Darker green for hover effect */
+  background-color: #f47ba3; /* Darker green for hover effect */
 }
 
 .product-link {
@@ -105,7 +105,7 @@ nav a {
   padding: 10px 20px;
   text-decoration: none; /* Remove underline */
   border-radius: 5px; /* Rounded corners for the link */
-  color: #007bff; /* Blue color for the link */
+  color: #343a40; /* Blue color for the link */
   background-color: #ffffff; /* White background for the link */
   border: 1px solid #ddd; /* Light border for the link */
   box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); /* Subtle shadow */
@@ -113,11 +113,14 @@ nav a {
 }
 
 nav a:hover {
-  background-color: #007bff; /* Blue background on hover */
+  background-color: #DB7093; /* Blue background on hover */
   color: white; /* White text color on hover */
 }
 
 nav a.active {
-  background-color: #0056b3; /* Darker blue for the active link */
+  background-color: #DB7093; /* Darker blue for the active link */
   color: white;
 }
+
+
+
