--- a/frontend/src/components/ProductDetail.css
+++ b/frontend/src/components/ProductDetail.css
@@ -1,20 +1,20 @@
 .product-detail {
-    max-width: 800px; /* Width of the container */
-    margin: 20px auto; /* Center the container */
+    max-width: 800px;
+    margin: 20px auto; 
     display: flex;
-    align-items: flex-start; /* Align items to the start */
-    gap: 30px; /* Space between image and details */
+    align-items: flex-start; 
+    gap: 30px; 
   }
   
   .product-detail img {
-    width: 50%; /* Half of the container width */
+    width: 50%; 
     height: auto;
     object-fit: cover;
-    border-radius: 8px; /* Rounded corners for the image */
+    border-radius: 8px; 
   }
   
   .product-detail-content {
-    width: 50%; /* Half of the container width */
+    width: 50%;
   }
   
   .product-detail-content h2 {
@@ -34,36 +34,36 @@
   .quantity-control button {
     padding: 5px 10px;
     margin: 0 10px;
-    background-color: #DB7093; /* Button background color */
-    color: white; /* Button text color */
+    background-color: #DB7093; 
+    color: white; 
     border: none;
-    border-radius: 5px; /* Rounded corners */
+    border-radius: 5px; 
     cursor: pointer;
   }
   
   .quantity-control button:hover {
-    background-color: #f47ba3; /* Darker color for hover effect */
+    background-color: #f47ba3; 
   }
   
   .product-buttons {
     display: flex;
-    gap: 10px; /* Space between buttons */
-    margin-top: 20px; /* Space above buttons */
-    justify-content: flex-start; /* Align buttons to the left */
+    gap: 10px; 
+    margin-top: 20px; 
+    justify-content: flex-start;
   }
   
   .product-buttons button {
     display: inline-block;
     padding: 10px 20px;
     border: none;
-    border-radius: 5px; /* Rounded corners */
+    border-radius: 5px; 
     cursor: pointer;
-    background-color: #DB7093; /* Button background color */
-    color: white; /* Button text color */
-    text-decoration: none; /* Remove underline for the link */
+    background-color: #DB7093; 
+    color: white; 
+    text-decoration: none;
   }
   
   .product-buttons button:hover {
-    background-color: #f47ba3; /* Darker color for hover effect */
+    background-color: #f47ba3;
   }
   
