--- a/frontend/src/components/ShoppingCart.css
+++ b/frontend/src/components/ShoppingCart.css
@@ -66,4 +66,19 @@
   .back-button:hover {
     background-color: #f47ba3;
   }
+
+  .checkout-button {
+    display: block;
+    padding: 10px 20px;
+    background-color: #DB7093;
+    color: white;
+    border: none;
+    border-radius: 5px;
+    cursor: pointer;
+    text-align: center;
+    margin-top: 20px;
+  }
   
+  .checkout-button:hover {
+    background-color: #f47ba3;
+  }
